charls_lib = library('charls',
    include_directories: [
        charls_inc,
        '.',
    ],
    sources: [
        'charls_jpegls_decoder.cpp',
        'charls_jpegls_encoder.cpp',
        'jpegls.cpp',
        'jpegls_error.cpp',
        'jpeg_stream_reader.cpp',
        'jpeg_stream_writer.cpp',
        'version.cpp',
    ],
)